# wallpaper-auto

./: .gitignore  1  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish-test.yml  publish.yml  publish_test.yml
scripts/: config.yaml  demo_network_trigger.py  demo_time_monitor.py  demo_time_trigger.py  demo_window_session_trigger.py  test.py
src/wallpaper_auto/: __init__.py  __main__.py  atshutdown.py  init_config.py  models.py  resource_manager.py  rule_engine.py  service.py  system_tray.py  task.py  trigger_manager.py
src/wallpaper_auto/evaluator/: weekday_evaluator.py
src/wallpaper_auto/resource/: resource_carousel.py  static_wallpaper.py  wallpaper_utils.py
src/wallpaper_auto/trigger/: time_trigger.py  windows_session_trigger.py
src/wallpaper_automator/: __init__.py  __main__.py  config_store.py  init_config.py  models.py  process_mutex.py  resource_manager.py  rule_engine.py  service.py  system_tray.py  task.py  trigger_manager.py  wallpaper_controller.py
src/wallpaper_automator/evaluator/: base_evaluator.py  geo_evaluator.py  time_range_evaluator.py  weekday_evaluator.py  wifi_ssid_evaluator.py  workday_evaluator.py
src/wallpaper_automator/resource/: base_resource.py  dynamic_wallpaper.py  resource_carousel.py  static_wallpaper.py  wallpaper_utils.py
src/wallpaper_automator/trigger/: base_trigger.py  network_trigger.py  time_trigger.py  windows_session_trigger.py
src/wallpaper_automator/util/: callback_register.py
tests/: test_atshutdown.py  test_bridge.py  test_config_store.py  test_init_config.py  test_process_mutex.py  test_resource_manager.py  test_rule_engine.py  test_service.py  test_system_tray.py  test_trigger_manager.py  test_wallpaper_controller.py
tests/evaluator/: test_geo_evaluator.py  test_time_range_evaluator.py  test_weekday_evaluator.py  test_wifi_ssid_evaluator.py  test_workday_evaluator.py
tests/resource/: conftest.py  test_base_resource.py  test_dynamic_wallpaper.py  test_resource_carousel.py  test_static_wallpaper.py
tests/trigger/: conftest.py  test_network_trigger.py  test_time_trigger.py  test_windows_session_trigger.py
tests/util/: test_callback_register.py
